# rust-study

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Makefile  deny.toml  readme.md  rust.md  rustfmt.toml
.cargo/: config.toml
async_pkg/: Cargo.toml
async_pkg/src/: async_block.rs  fused.rs  fused2.rs  join.rs  lib.rs  select.rs  stream.rs  unpin.rs
base/: Cargo.toml  log-file-name
base/src/: _async.rs  add.rs  async_client.rs  barrier.rs  base.rs  class.rs  debug.rs  display.rs  env.rs  err.rs  file.rs  for.rs  from.rs  if.rs  io.rs  iter.rs  lib.rs  match.rs  module.rs  mutex.rs  panic.rs  parse.rs  pbj.rs  random.rs  rc.rs  ref.rs  reg.rs  safe.rs  str.rs  trait.rs  trait_asref.rs  trait_bibao.rs  trait_copy.rs  trait_default.rs  trait_deref.rs  trait_drop.rs  type.rs  vec.rs  vegetables.rs  web.rs  (+1 more)
error-code-02/: Cargo.toml
error-code-02/examples/: web.rs
error-code-02/src/: lib.rs
examples/: Cargo.toml  build.rs
examples-03/: Cargo.toml  Makefile
examples-03/benches/: criterion.rs
examples-03/examples/: arc_swap.rs  argon.rs  bytes.rs  echo_server.rs  enum_dispatch.rs  fake.rs  jwt.rs  matchit.rs  once.rs  proto.rs  reqwest.rs  sha.rs  struct_builder.rs  strum.rs  this_error.rs
examples-03/src/: argon.rs  bytes.rs  derive_more.rs  enum_dispatch.rs  jwt.rs  lib.rs  reqwest.rs  sha.rs  sqlx.rs  struct_builder.rs  strum.rs  this_error.rs  tracing_study.rs
examples-03/src/axum/: axum_study.rs  layer.rs  mod.rs  opentelemetry_otlp.rs
examples-03/src/axum/middwares/: auth.rs  mod.rs  request_id.rs
examples-03/src/demo/: chat_room.rs  echo_server.rs  minginx.rs  short_link.rest  short_link.rs
examples-03/src/pb/: user_stats.rs
examples-03/src/serde/: serde.rs
examples-03/src/tokio/: base.rs  broadcast.rs  computer.rs  join.rs  mod.rs
examples/benches/criterion/: main.rs
examples/error-code/: Cargo.toml
examples/examples/: ahash.rs  arc_swap.rs  argon.rs  arr.rs  async_client.rs  atomic.rs  bytes.rs  cfg_if.rs  clone.rs  derive_more.rs  dialoguer.rs  enum_dispatch.rs  env.rs  err.rs  error.rs  fake.rs  file.rs  for.rs  indexmap.rs  jwt.rs  once.rs  password.rs  pest.rs  random.rs  ref.rs  reg.rs  requests.rs  reqwest.rs  rhai.rs  rquickjs.rs  rustc_demangle.rs  sha.rs  sqlx.rs  str.rs  struct_builder.rs  strum.rs  this_error.rs  thread_pool.rs  tracing_study.rs  type.rs  (+3 more)
examples/src/: lib.rs
examples/src/axum/: axum_study.rs  layer.rs  opentelemetry_otlp.rs
examples/src/axum/middwares/: auth.rs  mod.rs  server_time.rs
examples/src/demo/: chat_room.rs  echo_server.rs  minginx.rs  mod.rs  short_link.rs
examples/src/serde/: mod.rs  serde.rs  serde_serialize.rs
examples/src/tokio/: base.rs  broadcast.rs  computer.rs  join.rs
examples/tests/: loom.rs
grpc/: Cargo.toml
grpc/proto/: query.proto
grpc/proto/basic/: basic.proto
grpc/src/: lib.rs
grpc/src/proto-gen/: basic.rs  query.rs
hello_macro_attribute/: Cargo.toml
hello_macro_attribute/src/: lib.rs
hello_macro_derive/: Cargo.toml
hello_macro_derive/examples/: auto_debug.rs  auto_deref.rs  dynamic_dispatch_non.rs  enum_from.rs  enum_from_darling.rs  print_deriveinput.rs
hello_macro_derive/src/: lib.rs
hello_macro_derive/src/macros/: auto_debug.rs  auto_deref.rs  enum_from_darling.rs  error_info.rs  mod.rs
hello_macro_func/: Cargo.toml
hello_macro_func/src/: lib.rs
hello_macro_rules/: Cargo.toml
hello_macro_rules/src/: lib.rs
macro_pro/: Cargo.toml
macro_pro/src/: main.rs
macros/: Cargo.toml
macros-01/: readme.md
macros-01/examples/: auto_deref.rs  deriveinput.txt  dynamic_dispatch_non.rs
macros-01/src/: lib.rs
macros-01/src/macros/: auto_debug.rs  auto_deref.rs  enum_from_darling.rs  error_info.rs
macros/examples/: auto_debug.rs  dynamic_dispatch.rs  print_deriveinput.rs
macros/src/macros/: auto_debug.rs  auto_deref.rs  enum_from.rs  enum_from_darling.rs  error_info.rs
rcli/: Cargo.toml
rcli/src/: lib.rs  logger.rs  main.rs  utils.rs
rcli/src/cli/: base64.rs  csv.rs  genpass.rs  http.rs  mod.rs
rcli/src/process/: base64.rs  csv_convert.rs  gen_pass.rs  http_serve.rs  mod.rs
rcli/src/struct/: base64.rs  csv.rs  mod.rs
rust-blog/: chat-server.md  common-rust-lifetime-misconceptions.md  learning-rust-in-2020.md  tour-of-rusts-standard-library-traits.md  why-blog.md
rust-weekly/: README.md
