[package]
name = "base"
version = "0.1.0"
edition = "2021"
authors = ["You <you@example.com>"]
license = "MIT"
homepage = "https://fernsim.example.com/"
repository = "https://gitlair.com/sporeador/fern_sim"
documentation = "http://fernsim.example.com/docs"
description = """
Fern simulation, from the cellular level up.
"""

[dependencies]
actix-web.workspace = true
thiserror.workspace = true
async-std.workspace = true
lazy_static.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde_json.workspace = true
serde.workspace = true
rand.workspace = true
regex.workspace = true
num-complex.workspace = true
unicode-normalization.workspace = true
features.workspace = true
surf.workspace = true
