[package]
name = "examples"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow.workspace = true
base.workspace = true
axum.workspace = true
base64.workspace = true
blake3.workspace = true
bytes.workspace = true
chacha20poly1305.workspace = true
chrono.workspace = true
dashmap.workspace = true
derive_builder.workspace = true
derive_more.workspace = true
futures.workspace = true
http.workspace = true
nanoid.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
tracing-opentelemetry.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
sqlx.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
enum_dispatch.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
tower-http.workspace = true
tokio-stream.workspace = true
jwt-simple.workspace = true
uuid = { workspace = true }
reqwest = { workspace = true }
tower = { workspace = true }
argon2 = { workspace = true }
axum-extra = { workspace = true }
sha1 = "0.10.6"
hex = "0.4.3"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
