[package]
name = "grpc"
version = "0.1.0"
edition = "2021"
description = "A demo to learn grpc with tonic."

[dependencies]

derive_builder = { workspace = true }
futures-util ={ workspace = true }
http = { workspace = true }
prost = { workspace = true }
prost-build ={ workspace = true }
prost-types ={ workspace = true }
proto-builder-trait = { workspace = true }
serde = { workspace = true }
sqlx ={ workspace = true }
tokio ={ workspace = true }
tonic ={ workspace = true }
tonic-build = { workspace = true }


[[bin]]
name="server"
path="src/bin/server.rs"

[[bin]]
name="client"
path="src/bin/client.rs"

[[bin]]
name="gen"
path= "src/bin/gen.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
